--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^5.6.0",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0"
+  },
+  "devDependencies": {
+    "mongoose": "^7.3.0"
   }
 }
